--- a/ch_note_styles.css
+++ b/ch_note_styles.css
@@ -31,7 +31,7 @@
 }
 
 .ch_note_topnav {
-  height: 40px;
+  height: 60px;
   width: 340px !important;
 
   background-color: #333;
@@ -41,20 +41,20 @@
 
 .ch_note_topnav a {
   padding: 5px;
+  text-decoration: none;
 }
 
 .ch_note_topnav a:link {
-  color: orange;
+  color: #42d7f4;
+  text-decoration: none;
 }
 
 .ch_note_topnav a:visited {
-  color: orange;
+  color: #42d7f4;
+  text-decoration: none;
 }
 
 .ch_note_topnav a:hover {
-  color: #42d7f4;
-}
-
-.ch_note_topnav a:active {
-  color orange;
+  color: yellow;
+  text-decoration: none;
 }
