--- a/css/ch_note_styles.css
+++ b/css/ch_note_styles.css
@@ -25,7 +25,7 @@
 
   background-color: #f4f261;
   box-sizing: content-box;
-  font: 14px system-ui;
+  font: 14px system-ui !important; 
   overflow: scroll;
   padding: 2px 8px !important;
   resize: none;
