--- a/css/ch_note_styles.css
+++ b/css/ch_note_styles.css
@@ -8,7 +8,7 @@
   padding-bottom: 20px;
   position: fixed;
   top: 0px;
-  z-index: 100001 !important;
+  z-index: 2000000000 !important;
 }
 
 .ch_note_left {
@@ -25,7 +25,7 @@
 
   background-color: #f4f261;
   box-sizing: content-box;
-  font: 14px system-ui !important; 
+  font: 14px system-ui !important;
   overflow: scroll;
   padding: 2px 8px !important;
   resize: none;
