--- a/css/ch_note_styles.css
+++ b/css/ch_note_styles.css
@@ -51,7 +51,7 @@
   text-decoration: none;
 }
 
-.ch_note_topnav a:link {
+/*.ch_note_topnav a:link {
   color: #42d7f4;
   text-decoration: none;
 }
@@ -69,7 +69,7 @@
 .ch_note_topnav a:active {
   color: #42d7f4;
   text-decoration: none;
-}
+}*/
 
 /*.ch_note_topnav svg:hover path {
   -webkit-filter: drop-shadow(12px 12px 7px rgba(0,0,0,0.5));
